# causal

./: .gitignore  AGENTIC_TILES_FIX.md  AUDIO_FLOW_WITH_VECTOR_DB.md  CLAUDE.md  DEBUG_LOGGING.md  RISK-ANALYSIS-ENHANCEMENT.md  TESTING_GUIDE.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_QUICKSTART.md  TESTING_STRATEGY.md  TEST_REPORT.md  TRANSCRIPTION_FIX_SUMMARY.md  VECTOR_EMBEDDINGS_IMPLEMENTATION.md  fix-risk-analysis.js  index.html  package-lock.json  package.json  playwright.config.ts  test-risk-analysis-enhancement.md  tsconfig.json  vite.config.ts  vitest.config.ts
.archive/architecture/: Architecture - Backend (Rust).md  Architecture - Frontend.md
.archive/development/: Development Commands.md
.archive/implementation/: Implementation Summary and Status.md  Threading Fix Implementation - Complete.md
.archive/reference/: File Locations Quick Reference.md
.claude/commands/: save-summary.md
.github/workflows/: build.yml  release.yml
architecture/: Project Overview.md  System Audio Capture Architecture.md
causal-project/: Audio Rate Limiting Issue - Switching to Chunk-Based Transcription.md
development/: Key Implementation Notes.md
docs/: LOGGING_IMPLEMENTATION_PLAN.md  LOGGING_SYSTEM.md  METRICS_AND_LOG_MANAGEMENT.md
e2e/helpers/: app-launcher.ts
e2e/tests/: example.spec.ts
implementation/: AssemblyAI API Migration - Complete.md  Authorization Header Fix - AssemblyAI v3 API.md  Final Working Solution - Complete AssemblyAI Integration.md  UI Issues Fixed - Transcription Errors and Stop Button.md  WebSocket Closing Error - Fixed.md
reference/: Configuration Files Reference.md  Dependencies and Plugins.md
scripts/: release.sh
src/: App.tsx  diagnostics.ts  main.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: buffer_processing.rs
src-tauri/capabilities/: default.json
src-tauri/models/: README.md
src-tauri/src/: encryption.rs  error.rs  lib.rs  main.rs
src-tauri/src-tauri/models/all-MiniLM-L6-v2/: model.onnx
src-tauri/src/database/: commands.rs  mod.rs  models.rs  secure_settings_commands.rs  serde_helpers.rs  store.rs
src-tauri/src/database/mongodb/: client.rs  collections.rs  commands.rs  config.rs  migrations.rs  mod.rs  models.rs  monitoring.rs  performance.rs  vector_search.rs
src-tauri/src/embeddings/: commands.rs  mod.rs  model.rs  service.rs  similarity.rs  storage.rs
src-tauri/src/intelligence/: commands.rs  coordinator.rs  mod.rs  types.rs
src-tauri/src/intelligence/agents/: competitive.rs  financial.rs  mod.rs  risk.rs  sentiment.rs  summary.rs
src-tauri/src/logging/: commands.rs  config.rs  metrics.rs  mod.rs  privacy.rs
src-tauri/src/pages/: IntelligenceSettingsPage.tsx  RecordingDetailsPage.tsx
src-tauri/src/test_utils/: mock_apis.rs  mod.rs
src-tauri/src/transcription/: assemblyai.rs  audio.rs  buffer.rs  buffer_pool.rs  commands.rs  enhancement.rs  mod.rs  recording_commands.rs  refinement.rs  session.rs  summary.rs
src-tauri/tests/database/: mod.rs
src-tauri/tests/transcription/: buffer_tests.rs  parallel_processing_tests.rs
src/__mocks__/: tauri.ts
src/__tests__/: setup.ts
src/contexts/: AppProviders.tsx  IntelligenceContext.tsx  NavigationContext.tsx  ProjectsContext.tsx  RecordingsContext.tsx  SettingsContext.tsx  ThemeProvider.tsx  TranscriptionContext.tsx
src/hooks/: use-analytics.ts  use-auto-intelligence-analysis.ts  use-auto-refresh.ts  use-historical-context.ts  use-intelligence.ts  use-loading-state.ts  use-mongo-search.ts  use-realtime-events.ts  use-recording-intelligence.ts  use-search.ts  use-theme.ts  use-visual-feedback.ts
src/lib/: tauri.ts  types.ts
src/pages/: HelpPage.tsx  IntelligenceSettingsPage.tsx  ToolsPage.tsx  (+1 more)
(+58 files in other folders)
