[package]
name = "causal"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "causal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture
cpal = "0.15"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# WebSocket client (using native-tls for better macOS compatibility)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
# Note: rustls requires additional crypto provider setup, native-tls uses system SSL

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json"] }

# Date/time handling
chrono = "0.4"

# Audio processing
rubato = "0.15"
hound = "3.5"  # WAV encoding/decoding

# Encoding
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# WebSocket support (for Universal Streaming)
url = "2.5"
http = "1.0"

# Anthropic SDK for AI enhancement
anthropic-sdk = "0.1"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

